--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <html>
   <head>
     <title>Sample App</title>
+    <link rel="stylesheet" type="text/css" href="/static/commons.css">
   </head>
   <body>
-    <div id='root'>
-      HII
+    <div class="row">
+        <div class="large-12 columns">
+          <div class="nav-bar right">
+           <ul class="button-group">
+             <li><a href="#" class="button">Link 1</a></li>
+             <li><a href="#" class="button">Link 2</a></li>
+             <li><a href="#" class="button">Link 3</a></li>
+             <li><a href="#" class="button">Link 4</a></li>
+            </ul>
+          </div>
+          <h1>Test</h1>
+          <hr/>
+        </div>
+      </div>
+    <div class="row">
+      <div class="large-12 columns">
+        <div id='root'>
+          Hlkasjdfas
+        </div>
+      </div>
     </div>
-    <script src="/static/bundle.js"></script>
+      <footer class="row">
+        <div class="large-12 columns">
+          <hr/>
+          <div class="row">
+            <div class="large-6 columns">
+              <p>© Copyright no one at all. Go to town!.</p>
+            </div>
+            <div class="large-6 columns">
+              <ul class="inline-list right">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+                <li><a href="#">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>   
+    <script src="/static/commons.js"></script>
+    <script src="/static/app.js"></script>
   </body>
 </html>
